# slm-inference-engine

./: .gitignore  README.md  main.py  pyproject.toml
src/runtime/: cli.py
src/runtime/api/: routes.py  server.py
src/runtime/engines/: base.py  gguf_engine.py  mlx_engine.py
src/runtime/hardware/: detect.py
src/runtime/models/: request.py
src/runtime/runtime/: engine_manager.py  router.py  scheduler.py
