[project]
name = "ml-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anyio>=4.12.1",
    "fastapi>=0.135.1",
    "llama-cpp-python>=0.3.16",
    "loguru>=0.7.3",
    "mlx-lm>=0.31.1",
    "opentelemetry-api>=1.40.0",
    "opentelemetry-sdk>=1.40.0",
    "prometheus-client>=0.24.1",
    "psutil>=7.2.2",
    "pydantic>=2.12.5",
    "torch>=2.10.0",
    "transformers>=5.3.0",
    "typer>=0.24.1",
    "uvicorn>=0.41.0",
]

[tool.uv]
package = true

[tool.setuptools]
package-dir = {"" = "src"}

[project.scripts]
runtime = "runtime.cli:app"

[dependency-groups]
dev = [
    "black>=26.3.1",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.6",
]
